@@ -152,6 +152,7 @@ struct gretl_option gretl_opts[] = {
     { DATA,     OPT_O, "odbc", 0 },
     { DATAMOD,  OPT_P, "preserve", 0 },
     { DELEET,   OPT_D, "db", 0 },
+    { DELEET,   OPT_F, "force", 0 },
     { DELEET,   OPT_L, "list", 0 },
     { DIFFTEST, OPT_G, "sign", 0 },
     { DIFFTEST, OPT_R, "rank-sum", 0 },
@@ -341,6 +342,7 @@ struct gretl_option gretl_opts[] = {
     { OPEN,     OPT_S, "sheet", 2 },
     { OPEN,     OPT_W, "www", 0 },
     { OPEN,     OPT_L, "delimited", 0 },
+    { OPEN,     OPT_M, "rowmask", 2 },
     { OUTFILE,  OPT_A, "append", 0 },
     { OUTFILE,  OPT_C, "close", 0 },
     { OUTFILE,  OPT_W, "write", 0 },
