@@ -1,5 +1,7 @@
 Version 1.9.10, in progress
 - Update translations
+- "delete" command: add a --force option to permit deletion of
+  series in loops (to be used with caution!)
 
 2012-06-01 version 1.9.9
 - Add --cluster option (cluster-robust standard errors) for several
